# JUB_Software-Engineering

./: .gitignore  README.md  references.json
Pencil-Producer/: CMakeLists.txt  Pencil-Producer.pro  Pencil-Producer.pro.user.6231bdc  Pencil-Producer.pro.user.aec07e0  apm2000_inventory.cpp  apm2000_inventory.h  graphite_inventory.cpp  graphite_inventory.h  main.cpp  material_inventory.cpp  material_inventory.h  pencil_inventory.cpp  pencil_inventory.h  pencilproducer.cpp  pencilproducer.h  pencilproducer.ui  wallet.cpp  wallet.h  wood_inventory.cpp  wood_inventory.h
Test/: CMakeLists.txt  Test.pro  tst_test.cpp
doc/: Doxyfile
doc/html/: annotated.html  apm2000__inventory_8cpp.html  apm2000__inventory_8h.html  apm2000__inventory_8h_source.html  classAPM2000__Inventory-members.html  classAPM2000__Inventory.html  classGraphite__Inventory-members.html  classGraphite__Inventory.html  classGraphite__Inventory__coll__graph.dot  classGraphite__Inventory__coll__graph.md5  classGraphite__Inventory__inherit__graph.dot  classGraphite__Inventory__inherit__graph.md5  classMaterial__Inventory-members.html  classMaterial__Inventory.html  classMaterial__Inventory__inherit__graph.dot  classMaterial__Inventory__inherit__graph.md5  classPencilProducer-members.html  classPencilProducer.html  classPencilProducer__coll__graph.dot  classPencilProducer__coll__graph.md5  classPencilProducer__inherit__graph.dot  classPencilProducer__inherit__graph.md5  classPencil__Inventory-members.html  classPencil__Inventory.html  classWallet-members.html  classWallet.html  classWood__Inventory-members.html  classWood__Inventory.html  classWood__Inventory__coll__graph.dot  classWood__Inventory__coll__graph.md5  classWood__Inventory__inherit__graph.dot  classWood__Inventory__inherit__graph.md5  class__Test-members.html  class__Test.html  class__Test__coll__graph.dot  class__Test__coll__graph.md5  (+49 more)
(+104 files in other folders)
